--- a/cse7339/gui/templates/gui/upload.html
+++ b/cse7339/gui/templates/gui/upload.html
@@ -10,6 +10,6 @@
   </form>
 
   {% if file_name %}
-    <p>File uploading: <a href="{{ file_name }}">{{ file_name }}</a></p>
+    <p>File uploaded: <a href="{{ file_name }}">{{ file_name }}</a></p>
   {% endif %}
   {% endblock %}
